fix:  Bring styling of both pages into alignment

--- a/css/restaurant-details.css
+++ b/css/restaurant-details.css
@@ -9,9 +9,8 @@ header {
 .restaurant-container {
     border-bottom: 1px solid #d9d9d9;
     border-top: 1px solid #fff;
-/*    padding: 140px 40px 30px; */
-    padding: 0;
-    width: 100%;
+    padding: 0 20px 20px;
+    width: calc(100% - 40px);
 }
 
 .restaurant-name {
@@ -19,12 +18,14 @@ header {
     font: 20pt/1.1 Arial,sans-serif;
     font-weight: 200;
     letter-spacing: 0;
-    margin: 15px 0 30px;
+    margin: 15px 0 15px;
     text-transform: uppercase;
 }
 
 .restaurant-img {
     width: 100%;
+    border-top-left-radius: 25px;
+    border-bottom-right-radius: 25px;
 }
 
 .restaurant-address {
@@ -42,7 +43,7 @@ header {
     padding: 2px 0;
     text-align: center;
     text-transform: uppercase;
-    width: 100%;
+/*    width: 100%; */
 }
 
 .restaurant-hours td {
@@ -50,20 +51,20 @@ header {
 }
 
 
-/* Restaurant Reviews */
+/* Restaurant Review List */
 .reviews-container {
     border-bottom: 1px solid #d9d9d9;
     border-top: 1px solid #fff;
-    padding: 0;
-    width: 100%;
+    padding: 0 20px;
+    width: calc(100% - 40px);
 }
 
 .reviews-container h2 {
     color: #f58500;
     font-size: 24pt;
     font-weight: 300;
-    letter-spacing: -1px;
-    padding-bottom: 1pt;
+/*    letter-spacing: -1px; */
+    margin: 15px 0 0;
 }
 
 .reviews-list {
@@ -77,13 +78,53 @@ header {
     border: 2px solid #f3f3f3;
     display: inline-block;
     list-style: none;
-    margin: 0 0 15px;
+    margin: 10px 0 10px;
     overflow: hidden;
-    padding: 0 20px 0;
+    padding: 0;
     position: relative;
-    width: calc(100% - 80px);
+/*    width: calc(100% - 10px); */
+    border-top-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    text-align: left;
 }
 
-.reviews-list li p {
-    margin: 0 0 10px;
+
+/*  Individual Restaurant Review  */
+.review-name-date {
+    background-color: #333;
+    color: #fff;
+    overflow: hidden;
+    margin: 0;
+    padding: 20px;
+}
+
+.review-name {
+    display: inline;
+    float: left;
+    font-size: 2em;
+}
+
+.review-date {
+    display: inline;
+    float: right;
+    font-size: 1.5em;
+    color: lightgrey;
+}
+
+.review-rating {
+    margin:  20px;
+    padding: 8px 20px 8px 20px;
+    background-color: #f58500;
+    color: #fff;
+    text-transform: uppercase;
+    display: table;
+    font-size: 1.5em;
+    font-weight: bold;
+    border-radius: 3px;
+}
+
+.review-content {
+    padding: 0 20px 20px 20px;
+    line-height: 1.5em;
+    font-size: 1.5em;
 }
