--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,19 @@ a img{
   border: none 0 #fff;
 }
 
-h1,
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 20px;
+  height: 100%;
+  display: table;
+}
+
+h1 a {
+  height: 100%;
+  display: table-cell;
+  vertical-align: middle;
+}
+
 h2,
 h3,
 h4,
@@ -53,6 +65,13 @@ h5,
 h6 {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 0 20px;
+}
+
+header {
+  display: block;
+  width: 100%;
+  position: fixed;
+  z-index: 20000;
 }
 
 article,
@@ -109,8 +128,11 @@ nav h1 a {
   font-size: 17px;
   list-style: none;
   margin: 0;
-  padding: 10px 40px 16px;
-  width: calc(100% - 80px);
+  padding: 10px 20px 16px;
+  width: calc(100% - 40px);
+  -webkit-box-shadow:0px 2px 2px #888;
+  -moz-box-shadow:0px 2px 2px #888;
+  box-shadow:0px 2px 2px #888;
 }
 
 /* Display list items side by side */
@@ -143,5 +165,6 @@ nav h1 a {
   background: #ccc;
   height: 400px;
   width: 100%;
+  z-index: 10;
 }
 
